--- a/requirements.txt
+++ b/requirements.txt
@@ -1,56 +1,67 @@
-awscli==1.14.51
-backports.ssl-match-hostname==3.5.0.1
-blessed==1.14.2
-botocore==1.9.4
-cached-property==1.4.2
-cement==2.8.2
+absl-py==0.1.10
+appnope==0.1.0
+backcall==0.1.0
+bleach==1.5.0
 certifi==2018.4.16
 chardet==3.0.4
 click==6.7
-colorama==0.3.7
 dash==0.21.1
 dash-core-components==0.23.0
 dash-html-components==0.11.0
 dash-renderer==0.13.0
 decorator==4.3.0
-docker==3.3.0
-docker-compose==1.21.2
-docker-pycreds==0.2.3
-dockerpty==0.4.1
-docopt==0.6.2
-docutils==0.14
-enum34==1.1.6
+entrypoints==0.2.3
 Flask==1.0.2
 Flask-Compress==1.4.0
-functools32==3.2.3.post2
-futures==3.2.0
-idna==2.5
-ipaddress==1.0.22
+Flask-Cors==3.0.6
+futures==3.1.1
+html5lib==0.9999999
+idna==2.7
+ipykernel==4.8.2
+ipython==6.4.0
 ipython-genutils==0.2.0
+ipywidgets==7.2.1
 itsdangerous==0.24
+jedi==0.12.0
 Jinja2==2.10
-jmespath==0.9.3
 jsonschema==2.6.0
+jupyter==1.0.0
+jupyter-client==5.2.3
+jupyter-console==5.2.0
 jupyter-core==4.4.0
+Markdown==2.6.11
 MarkupSafe==1.0
+mistune==0.8.3
+nbconvert==5.3.1
 nbformat==4.4.0
-pathspec==0.5.5
+notebook==5.5.0
+numpy==1.14.0
+pandas==0.23.1
+pandocfilters==1.4.2
+parso==0.2.1
+pexpect==4.6.0
+pickleshare==0.7.4
 plotly==2.7.0
-powerline-status==2.6
-pyasn1==0.4.2
+prompt-toolkit==1.0.15
+protobuf==3.5.1
+ptyprocess==0.5.2
+Pygments==2.2.0
 python-dateutil==2.7.3
 pytz==2018.4
-PyYAML==3.12
-requests==2.17.0
-rsa==3.4.2
-s3transfer==0.1.13
-semantic-version==2.5.0
+pyzmq==17.0.0
+qtconsole==4.3.1
+requests==2.19.1
+Send2Trash==1.5.0
+simplegeneric==0.8.1
 six==1.11.0
-tabulate==0.7.5
-termcolor==1.1.0
-texttable==0.9.1
+tensorflow==1.5.0
+tensorflow-tensorboard==1.5.0
+terminado==0.8.1
+testpath==0.3.1
+tornado==5.0.2
 traitlets==4.3.2
-urllib3==1.21.1
+urllib3==1.23
 wcwidth==0.1.7
-websocket-client==0.48.0
 Werkzeug==0.14.1
+widgetsnbextension==3.2.1
+yapf==0.22.0
